--- a/src/style.css
+++ b/src/style.css
@@ -56,27 +56,27 @@ audio {
   }
 
 .Buscar input{
-  position: relative;
-  width: 115%;
-  height: 69%;
+  display: flex;
+  width: 57%;
+  height: 80%;
   border-radius: 18px;
-  margin-left: 50%;
+  margin-left: 35%;
 }
 
 .img1{
 
 position: relative;
-width: 16%;
-left: 23%;
+width: 25%;
+left: 14%;
 margin-top: 4%;
 border-radius: 18px;
 border: 10px solid rgb(32,4, 53, 0.95);
 }
 
-.resenaSG{
+.reseñaSG{
  position: relative;
   width: 35%;
-  left: 30%;
+  left: 25%;
   margin-top: 4%;
   background: rgba(32, 4, 53, 0.95);
   border-radius: 18px;
@@ -90,7 +90,7 @@ font-family: 'Noto Sans Kannada UI';
 font-size: 21px;
 }
 
-.section-peliculas{
+#section-peliculas{
  
   width: 78%;
   margin-left: 11%;
@@ -121,45 +121,38 @@ font-size: 21px;
   justify-content: space-around;
   border-radius: 10em;
   margin-left: 13%;
-  margin-top: 3%;
- 
+  margin-top: 3%; 
 }
-#TarjetaFilmP.MainDesign{
- margin: 5%;
- color: #fff;
- font-family: 'Noto Sans Kannada UI';
+.containerCard {
+  
+  position: relative;
+  margin: 2%;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 2% #5a387e;
+  color: white; 
 }
 
-.modal-content{
-  background: rgb(32,4, 53, 0.95);
-  margin-left: 8%;
-  margin-right: 8%;
-  border-radius: 3em;
-  display:flex;
-  flex-direction: row;
-  
+.containerCard:hover {
+  color: rgb(125, 154, 180);
+  cursor: pointer;
 }
 
-#TarjetaFilmPoster{
-  margin: 5%;
-  border-radius: 18px;
-  width: 27%;
- display: flex;
+.poster {
+  display: flex;
   
 }
-#section-personaje {
+#section-personajes {
   width: 78%;
   margin-left: 11%;
   background: #441E62;
   border-radius: 18px;
   margin-top: 10%;
-  height:70px;
-  
-  
+  height:70px; 
 }
 #section-Historia{
-  width: 78%;
-  margin-left: 11%;
+  width: 55%;
+  margin-left: 22%;
   background: #441E62;
   border-radius: 18px;
   margin-top: 8%;
