--- a/src/style.css
+++ b/src/style.css
@@ -56,10 +56,11 @@ audio {
   }
 
 .Buscar input{
-  display: flex;
+  display:flex;
   width: 57%;
   height: 80%;
   border-radius: 18px;
+  margin-left: 50%;
   margin-left: 35%;
 }
 
@@ -80,6 +81,7 @@ border: 10px solid rgb(32,4, 53, 0.95);
   margin-top: 4%;
   background: rgba(32, 4, 53, 0.95);
   border-radius: 18px;
+  
 }
 
 p{
@@ -90,15 +92,21 @@ font-family: 'Noto Sans Kannada UI';
 font-size: 21px;
 }
 
-#section-peliculas{
+p1{
  
+  color: white;
+  font-family: 'Noto Sans Kannada UI';
+  font-size: 17px;
+  }
+
+#section-peliculas{
   width: 78%;
   margin-left: 11%;
+  justify-content: space-around;
   background: #441E62;
   border-radius: 18px;
   margin-top: 8%;
   height:70px;
-
   
 }
 
@@ -108,7 +116,6 @@ font-size: 21px;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-content: center;
   margin-top: 8%;
   background: rgba(32, 4, 53, 0.95);
   border: 10px solid rgb(32,4, 53, 0.95);
@@ -121,8 +128,10 @@ font-size: 21px;
   justify-content: space-around;
   border-radius: 10em;
   margin-left: 13%;
-  margin-top: 3%; 
+  margin-top: 3%;
+ 
 }
+
 .containerCard {
   
   position: relative;
@@ -130,33 +139,85 @@ font-size: 21px;
   display: flex;
   flex-direction: column;
   box-shadow: 2% #5a387e;
-  color: white; 
+  
 }
 
 .containerCard:hover {
   color: rgb(125, 154, 180);
   cursor: pointer;
+  transition: 1s;
+  transform: scale(1.2);
+  
 }
 
 .poster {
+
   display: flex;
+  border-radius: 2em;
+}
+
+.modal-content{
+  background: rgb(32,4, 53, 0.95);
+  margin-left: 8%;
+  margin-right: 8%;
+  border-radius: 1em;
+  display:flex;
+  flex-direction: row;
+  list-style: none; 
+}
+em{
+  margin: 20px;
+text-align: justify;
+color: white;
+font-family: 'Noto Sans Kannada UI';
+font-size: 17px;
+
+}
+
+/*.containerTitle {
+  background-color: #7047bb;
+  width: 180px;
+  width: ;
+  height: 250px;
+  /*font-size: 16px;
+  padding: 10px;
+  text-align: center;
+  font-size: 10px;}*/
+
+/*#TarjetaFilmP.MainDesign{
+ margin: 5%;
+ color: #fff;
+ font-family: 'Noto Sans Kannada UI';
+}
+
+
+  
+
+
+#TarjetaFilmPoster{
+  margin: 5%;
+  border-radius: 18px;
+  width: 27%;
+ display: flex;
   
 }
-#section-personajes {
+#section-personaje {
   width: 78%;
   margin-left: 11%;
   background: #441E62;
   border-radius: 18px;
   margin-top: 10%;
-  height:70px; 
+  height:70px;
+  
+  
 }
 #section-Historia{
-  width: 55%;
-  margin-left: 22%;
+  width: 78%;
+  margin-left: 11%;
   background: #441E62;
   border-radius: 18px;
   margin-top: 8%;
   height:70px;
   text-align: center;
-}
+}*/
 
