--- a/src/style.css
+++ b/src/style.css
@@ -123,9 +123,6 @@ p1{
   margin: 10%;
 }
 .selectFilm{
-  display: inline-block;
-  flex-direction: row;
-  justify-content: space-around;
   border-radius: 10em;
   margin-left: 13%;
   margin-top: 3%;
@@ -146,7 +143,7 @@ p1{
   color: rgb(125, 154, 180);
   cursor: pointer;
   transition: 1s;
-  transform: scale(1.2);
+  transform: scale(1.1);
   
 }
 
@@ -156,7 +153,7 @@ p1{
   border-radius: 2em;
 }
 
-.modal-content{
+/*.modal-content{
   background: rgb(32,4, 53, 0.95);
   margin-left: 8%;
   margin-right: 8%;
@@ -172,35 +169,8 @@ color: white;
 font-family: 'Noto Sans Kannada UI';
 font-size: 17px;
 
-}
-
-/*.containerTitle {
-  background-color: #7047bb;
-  width: 180px;
-  width: ;
-  height: 250px;
-  /*font-size: 16px;
-  padding: 10px;
-  text-align: center;
-  font-size: 10px;}*/
-
-/*#TarjetaFilmP.MainDesign{
- margin: 5%;
- color: #fff;
- font-family: 'Noto Sans Kannada UI';
-}
-
-
+}*/
   
-
-
-#TarjetaFilmPoster{
-  margin: 5%;
-  border-radius: 18px;
-  width: 27%;
- display: flex;
-  
-}
 #section-personaje {
   width: 78%;
   margin-left: 11%;
@@ -211,6 +181,7 @@ font-size: 17px;
   
   
 }
+
 #section-Historia{
   width: 78%;
   margin-left: 11%;
@@ -219,5 +190,5 @@ font-size: 17px;
   margin-top: 8%;
   height:70px;
   text-align: center;
-}*/
+}
 
