--- a/src/style.css
+++ b/src/style.css
@@ -161,11 +161,13 @@ p1{
   margin-left: 8%;
   margin-right: 8%;
   border-radius: 1em;
-  display:flex;
+ 
   flex-direction: row;
   list-style: none; 
   padding: 1%;
+  
 }
+
 em{
 margin: 2%;
 text-align: justify;
@@ -212,33 +214,16 @@ display: flex;
 }
 
 
-/*.containerTitle {
-  background-color: #7047bb;
-  width: 180px;
-  width: ;
-  height: 250px;
-  /*font-size: 16px;
-  padding: 10px;
-  text-align: center;
-  font-size: 10px;}*/
 
-/*#TarjetaFilmP.MainDesign{
- margin: 5%;
- color: #fff;
- font-family: 'Noto Sans Kannada UI';
-}
+
 
 
   
 
 
-#TarjetaFilmPoster{
-  margin: 5%;
-  border-radius: 18px;
-  width: 27%;
- display: flex;
+
   
-}
+
 #section-personaje {
   width: 78%;
   margin-left: 11%;
@@ -257,5 +242,84 @@ display: flex;
   margin-top: 8%;
   height:70px;
   text-align: center;
-}*/
+}
 
+
+#myImg {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#myImg:hover {opacity: 0.7;}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (Image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+/* Caption of Modal Image (Image Text) - Same Width as the Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation - Zoom in the Modal */
+.modal-content, #caption {
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+  .modal-content {
+    width: 100%;
+  }
+}
