--- a/src/style.css
+++ b/src/style.css
@@ -24,8 +24,8 @@ body{
 audio {
   margin-top: 1%;
   margin-left: 10%;
-  height: 20px;
-  width: 103px;
+  height: 3em;
+  width: 10em;
   
 }
 .botones{ 
@@ -39,11 +39,10 @@ audio {
 
  ul {
     
-    display: flex;
     list-style: none; 
     padding-top:0%;
   } 
- 
+  
   a {
     color: #fff;
     padding: 30px;
@@ -55,14 +54,14 @@ audio {
     transition: 0.5s;
   }
 
-.Buscar input{
+/*.Buscar input{
   display:flex;
   width: 57%;
   height: 80%;
   border-radius: 18px;
   margin-left: 50%;
   margin-left: 35%;
-}
+}*/
 
 .img1{
 
@@ -80,8 +79,7 @@ border: 10px solid rgb(32,4, 53, 0.95);
   left: 25%;
   margin-top: 4%;
   background: rgba(32, 4, 53, 0.95);
-  border-radius: 18px;
-  
+  border-radius: 18px; 
 }
 
 p{
@@ -122,6 +120,7 @@ p1{
   border-radius: 18px;
   margin: 10%;
 }
+
 .selectFilm{
   display: inline-block;
   flex-direction: row;
@@ -156,59 +155,32 @@ p1{
   border-radius: 2em;
 }
 
-.modal-content{
-  background: rgb(32,4, 53, 0.95);
-  margin-left: 8%;
-  margin-right: 8%;
-  border-radius: 1em;
- 
-  flex-direction: row;
-  list-style: none; 
-  padding: 1%;
-  
-}
-
-em{
+/*em{
 margin: 2%;
 text-align: justify;
 color: white;
 font-family: 'Noto Sans Kannada UI';
 font-size: 17px;
-}
+}*/
 
-.dataPersonajes{
- background: rgb(32,4, 53, 0.95);
-display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
- padding: 1%;
-  align-content:space-between;
- justify-content:flex-start;
- border-radius: 2em ;
-}
+
 .imgPersonajes{
   position: relative;
   margin: 2%;
   display: flex;
   flex-wrap: wrap;
-  border-radius: 2em;
+  border-radius: 1em;
   width: 10em;
   height: 10em;  
   align-content:space-between;
 }
-.dataUbicaciones{
-background: rgb(32,4, 53, 0.95);
-display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
- padding: 1%;
-  align-content:space-between;
- justify-content: space-evenly;
- border-radius: 2em ;
-}
+
 .imgUbicacion {
+  position: relative;
+  margin: 2%;
   display: flex;
-  border-radius: 2em;
+  flex-wrap: wrap;
+  border-radius: 1em;
   width: 10em;
   height: 10em;
 }
@@ -216,37 +188,8 @@ display: flex;
 
 
 
-
-
-  
-
-
-
-  
-
-#section-personaje {
-  width: 78%;
-  margin-left: 11%;
-  background: #441E62;
-  border-radius: 18px;
-  margin-top: 10%;
-  height:70px;
-  
-  
-}
-#section-Historia{
-  width: 78%;
-  margin-left: 11%;
-  background: #441E62;
-  border-radius: 18px;
-  margin-top: 8%;
-  height:70px;
-  text-align: center;
-}
-
-
 #myImg {
-  border-radius: 5px;
+  border-radius: 1em;
   cursor: pointer;
   transition: 0.3s;
 }
@@ -258,41 +201,67 @@ display: flex;
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  padding-top: 50px; 
+ /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  background-color: rgba(0,0,0,0.9);/* Black w/ opacity */
 }
+.dataUbicaciones{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+ padding: 1%;
+  align-content:space-between;
+ justify-content:flex-start;
+ padding-bottom: 5%;
+}
+.marginUbic{
+  display :grid;
+  margin:2em;
+}
+.dataSheet{
+  padding: 1%;
+  display: flex;
 
-/* Modal Content (Image) */
+}
+.dataPersonajes{
+ 
+ display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+ padding: 1%;
+  align-content:space-between;
+ justify-content:flex-start;
+ 
+}
+.marginPerso{
+  display :grid;
+  margin:2em;
+}
+.modal-content{
+  margin-left: 8%;
+  height: 18em;
+  border-radius: 1em;
+  padding: 1%;
+}
+/*.modal-content{
+  
+  margin-left: 8%;
+  margin-right: 8%;
+  
+  
+}
 .modal-content {
-  margin: auto;
-  display: block;
+  
   width: 80%;
   max-width: 700px;
 }
-
-/* Caption of Modal Image (Image Text) - Same Width as the Image */
-#caption {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-  text-align: center;
-  color: #ccc;
-  padding: 10px 0;
-  height: 150px;
-}
-
-/* Add Animation - Zoom in the Modal */
-.modal-content, #caption {
-  animation-name: zoom;
-  animation-duration: 0.6s;
-}
+*/
 
 @keyframes zoom {
   from {transform:scale(0)}
@@ -317,9 +286,30 @@ display: flex;
   cursor: pointer;
 }
 
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
+
+
+
+/*#section-personaje {
+  width: 78%;
+  margin-left: 11%;
+  background: #441E62;
+  border-radius: 18px;
+  margin-top: 10%;
+  height:70px;
+}
+/* 100% Image Width on Smaller Screens 
+  @media only screen and (max-width: 700px){
   .modal-content {
     width: 100%;
   }
+  
 }
+#section-Historia{
+  width: 78%;
+  margin-left: 11%;
+  background: #441E62;
+  border-radius: 18px;
+  margin-top: 8%;
+  height:70px;
+  text-align: center;
+}*/
