--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@ body{
 }
 audio {
   margin-top: 1%;
-  margin-left: 10%;
+  margin-left: 60%;
   height: 3em;
   width: 10em;
   
@@ -31,9 +31,10 @@ audio {
 .botones{ 
 
   display: flex;
+  flex-direction: row;
   width: 78%;
   margin-left: 11%;
-  background: #441E62;
+  background:rgba(32, 4, 53, 0.95);
   border-radius: 18px;
 }
 
@@ -95,13 +96,14 @@ p1{
   color: white;
   font-family: 'Noto Sans Kannada UI';
   font-size: 17px;
+  margin-left: 4%;
   }
 
 #section-peliculas{
   width: 78%;
   margin-left: 11%;
-  justify-content: space-around;
-  background: #441E62;
+  /*justify-content: space-between;*/
+  background: rgba(32, 4, 53, 0.95);
   border-radius: 18px;
   margin-top: 8%;
   height:70px;
@@ -123,10 +125,10 @@ p1{
 
 .selectFilm{
   display: inline-block;
-  flex-direction: row;
-  justify-content: space-around;
-  border-radius: 10em;
-  margin-left: 13%;
+  /*flex-direction: row;
+  justify-content: space-around;*/
+  border-radius: 7em;
+  margin-left: 8%;
   margin-top: 3%;
  
 }
@@ -136,13 +138,13 @@ p1{
   position: relative;
   margin: 2%;
   display: flex;
-  flex-direction: column;
-  box-shadow: 2% #5a387e;
+  
+
   
 }
 
 .containerCard:hover {
-  color: rgb(125, 154, 180);
+
   cursor: pointer;
   transition: 1s;
   transform: scale(1.2);
@@ -194,13 +196,12 @@ font-size: 17px;
   transition: 0.3s;
 }
 
-#myImg:hover {opacity: 0.7;}
 
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+   /*z-index: 1; Sit on top */
   padding-top: 50px; 
  /* Location of the box */
   left: 0;
@@ -245,7 +246,7 @@ font-size: 17px;
 }
 .modal-content{
   margin-left: 8%;
-  height: 18em;
+  height: 20em;
   border-radius: 1em;
   padding: 1%;
 }
@@ -286,30 +287,17 @@ font-size: 17px;
   cursor: pointer;
 }
 
-
-
-
-/*#section-personaje {
-  width: 78%;
+.footer{
+  background-color: rgba(32, 4, 53, 0.95);
+  width: 70%;
   margin-left: 11%;
-  background: #441E62;
-  border-radius: 18px;
-  margin-top: 10%;
-  height:70px;
-}
-/* 100% Image Width on Smaller Screens 
-  @media only screen and (max-width: 700px){
-  .modal-content {
-    width: 100%;
-  }
-  
-}
-#section-Historia{
-  width: 78%;
-  margin-left: 11%;
-  background: #441E62;
+  justify-content: space-around;
   border-radius: 18px;
   margin-top: 8%;
-  height:70px;
-  text-align: center;
-}*/
+  height:20px;
+  justify-content: center;
+  align-content: center;
+  padding: 2%;
+}
+
+
